@@ -38,6 +38,7 @@ https://github.com/elastic/beats/compare/v6.5.0...6.x[Check the HEAD diff]
 *Affecting all Beats*
 
 - Propagate Sync error when running SafeFileRotate. {pull}9069[9069]
+- Refresh host metadata in add_host_metadata. {pull}9359[9359]
 
 *Auditbeat*
 
@@ -81,6 +82,7 @@ https://github.com/elastic/beats/compare/v6.5.0...6.x[Check the HEAD diff]
 
 - Dissect will now flag event on parsing error. {pull}8751[8751]
 - Added the `redirect_stderr` option that allows panics to be logged to log files. {pull}8430[8430]
+- Add cache.ttl to add_host_metadata. {pull}9359[9359]
 
 *Auditbeat*
 
